package de.ngoldack.statsforbrett.enums;

public enum BoardgameType {
    BASE_GAME,
    EXTENSION
}
