package de.ngoldack.statsforbrett.models;

public enum VideogamePlattform {
    UNKNOWN,
    XBOX,
    PLAYSTATION,
    SWITCH,
    WINDOWS,
    MOBILE,
    VR
}
